Fix: QrCode overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -33,9 +33,8 @@ body {
     max-width: 256px;
     max-height: 256px;
     margin: 10px 10px 24px;
-    overflow: hidden;
 }
-.qrcode-img, img {
+.qrcode-img, img, canvas {
     width: 256px;
     height: 256px;
 }
